dnl $Id$
dnl Process this file with autoconf to produce a configure script.
AC_INIT(flowd.c)

dnl Checks for programs.
AC_PROG_CC

CFLAGS=
dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_CHECK_FUNCS(inet_addr)
case x$ac_cv_func_inet_addr in
  xno)
    AC_MSG_CHECKING(for inet_addr in -lxnet)
    OLD_LIBS=$LIBS
    LIBS="$LIBS -lxnet"
    AC_TRY_LINK([#include <arpa/inet.h>],[inet_addr("");],
          AC_MSG_RESULT(yes), AC_MSG_RESULT(no); AC_ERROR(no inet_addr() found))
    ;;
esac

dnl Set dirs
logdir=/var/log/flow
AC_ARG_WITH(logdir,
     [  --with-logdir=path      log files directory (default /var/log/flow)],
     [logdir=$withval], [])
AC_DEFINE_UNQUOTED(LOGDIR, "$logdir")

AC_ARG_WITH(debug,
     [  --with-debug            generate debug info],
     [CFLAGS="$CFLAGS -g"], [CFLAGS="$CFLAGS -O3"])

nl Set shmem params
nbits=2
maxprefix=24
AC_ARG_WITH(nbits,
     [  --with-nbits=NBITS      set number of bits for class of addr (2)],
     [nbits=$withval],[])
AC_ARG_WITH(minprefix,
     [  --with-maxprefix=LEN    set maximum prefix length (24)],
     [maxprefix=$withval],[])
[if echo $nbits | grep -q '[^0-9]' || [ $nbits -ne 1 -a $nbits -ne 2 -a $nbits -ne 4 -a $nbits -ne 8 -a $nbits -ne 16 ]]
then
	AC_ERROR(Incorrect nbits value $nbits, must be 1..16, power of 2)
fi
[if echo $maxprefix | grep -q '[^0-9]' || [ $maxprefix -gt 32 -o $maxprefix -lt 16 ]]
then
	AC_ERROR(Incorrect nbits value $nbits, must be 1..16, power of 2)
fi

AC_DEFINE_UNQUOTED(NBITS, $nbits)
AC_DEFINE_UNQUOTED(MAXPREFIX, $maxprefix)

AC_OUTPUT(Makefile)
